--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
-pic18f47q10-cnano-i2c-read-write-int-fs.X/build
-pic18f47q10-cnano-i2c-read-write-int-fs.X/debug
-pic18f47q10-cnano-i2c-read-write-int-fs.X/dist
+/*/dist/
+/*/build/
+/*/nbproject/private/
+/*/nbproject/*.properties
+/*/nbproject/*.mk
+/*/nbproject/*.bash
